// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultPage 404 1`] = `
<div class="md-example-child md-example-child-result-page md-example-child-result-page-0">
  <div class="md-result">
    <div class="md-result-image"><img src="//manhattan.didistatic.com/static/manhattan/mand-mobile/result-page/2.1/lost.png" class="lost"></div>
    <!---->
    <div class="md-result-subtext">您要访问的页面已丢失</div>
    <!---->
  </div>
</div>
`;

exports[`ResultPage Custom pattern 1`] = `
<div class="md-example-child md-example-child-result-page md-example-child-result-page-3">
  <div class="md-result customized">
    <div class="md-result-image"><img src="//manhattan.didistatic.com/static/manhattan/do1_JX7bcfXqLpStKRv31xlp"></div>
    <div class="md-result-text">不太确定自己错在了哪里...</div>
    <div class="md-result-subtext">要不然刷新试试？</div>
    <!---->
  </div>
</div>
`;

exports[`ResultPage Network anomaly 1`] = `
<div class="md-example-child md-example-child-result-page md-example-child-result-page-1">
  <div class="md-result">
    <div class="md-result-image"><img src="//manhattan.didistatic.com/static/manhattan/mand-mobile/result-page/2.1/network.png" class="network"></div>
    <div class="md-result-text">网络连接异常</div>
    <div class="md-result-subtext">点击屏幕，重新加载</div>
    <!---->
  </div>
</div>
`;

exports[`ResultPage With button 1`] = `
<div class="md-example-child md-example-child-result-page md-example-child-result-page-2">
  <div class="md-result">
    <div class="md-result-image"><img src="//manhattan.didistatic.com/static/manhattan/mand-mobile/result-page/2.1/empty.png" class="empty"></div>
    <div class="md-result-text">暂无信息</div>
    <!---->
    <div class="md-result-buttons"><button type="button" class="md-button default active inline plain small">
        <div class="md-button-inner">
          <!---->
          <div class="md-button-content">
            普通按钮
          </div>
        </div>
      </button><button type="button" class="md-button primary active inline plain small">
        <div class="md-button-inner">
          <!---->
          <div class="md-button-content">
            高亮按钮
          </div>
        </div>
      </button></div>
  </div>
</div>
`;
